--- a/src/components/common/modal/Modal.module.css
+++ b/src/components/common/modal/Modal.module.css
@@ -15,4 +15,20 @@
     width: 90%;
     height: 90%;
     border-radius: 30px;
+    overflow-y: scroll;
+
+}
+.modal::-webkit-scrollbar {
+    width: 4px; /* Ширина скроллбара */
+    height: 100px;
+    padding: 30px 30px;
+}
+
+.modal::-webkit-scrollbar-thumb {
+    background-color: #ea2aad; /* Цвет ползунка */
+    border-radius: 4px; /* Радиус скругления ползунка */
+}
+
+.modal::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(115, 7, 94, 0.76); /* Цвет ползунка при наведении */
 }
